@@ -11,8 +11,11 @@ import com.education.takeit.roadmap.entity.*;
 import com.education.takeit.roadmap.repository.RoadmapManagementRepository;
 import com.education.takeit.roadmap.repository.RoadmapRepository;
 import com.education.takeit.roadmap.repository.SubjectRepository;
+import com.education.takeit.user.entity.LectureAmount;
+import com.education.takeit.user.entity.PriceLevel;
 import com.education.takeit.user.entity.User;
 import com.education.takeit.user.repository.UserRepository;
+import com.education.takeit.user.service.UserService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -20,6 +23,7 @@ import jakarta.persistence.EntityNotFoundException;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.redis.core.RedisTemplate;
@@ -35,6 +39,7 @@ public class RoadmapService {
   private final RoadmapRepository roadmapRepository;
   private final UserRepository userRepository;
   private final RoadmapTransactionalService roadmapTransactionalService;
+  private final UserService userService;
 
   public RoadmapSaveResDto selectRoadmap(Long userId, List<DiagnosisAnswerRequest> answers) {
 
@@ -233,12 +238,48 @@ public class RoadmapService {
     return new RoadmapSaveResDto("사용자는 uuid가 없어요", defaultLocationSubjectId, subjects);
   }
 
+  // 로드맵 이름 임의로 만들어둠
+  private static final List<String> ROADMAP_NAMES =
+      List.of(
+          "노래하는 고양이",
+          "춤추는 피자",
+          "멍때리는 펭귄",
+          "분노한 수박",
+          "반짝이는 당근",
+          "달리는 감자",
+          "졸린 기린",
+          "웃고있는 문어",
+          "무서운 토끼",
+          "행복한 고래",
+          "날아가는 젤리",
+          "수줍은 치킨",
+          "엉뚱한 양말",
+          "잠든 아이스크림",
+          "도망치는 바나나",
+          "외계에서 온 두부",
+          "흔들리는 라면",
+          "귀여운 악어",
+          "말하는 부엉이",
+          "삐진 햄스터");
+
   public void saveRoadmap(
       Long userId, List<Long> subjectIds, List<DiagnosisAnswerRequest> answers) {
 
     if (roadmapManagementRepository.findByUserId(userId) != null) {
       throw new CustomException(StatusCode.ALREADY_EXIST_ROADMAP);
     }
+
+    String randomRoadmapName =
+        ROADMAP_NAMES.get(ThreadLocalRandom.current().nextInt(ROADMAP_NAMES.size()));
+
+    RoadmapManagement roadmapManagement =
+        RoadmapManagement.builder()
+            .roadmapNm(randomRoadmapName)
+            .roadmapTimestamp(LocalDateTime.now())
+            .userId(userId)
+            .build();
+
+    roadmapManagementRepository.save(roadmapManagement);
 
     LectureAmount lectureAmount = null;
     PriceLevel priceLevel = null;
@@ -258,18 +299,11 @@ public class RoadmapService {
         likesBooks = value.equals("Y");
       }
     }
-
-    RoadmapManagement roadmapManagement =
-        RoadmapManagement.builder()
-            .roadmapNm("Roadmap")
-            .roadmapTimestamp(LocalDateTime.now())
-            .userId(userId)
-            .lectureAmount(lectureAmount)
-            .priceLevel(priceLevel)
-            .likesBooks(likesBooks)
-            .build();
-
-    roadmapManagementRepository.save(roadmapManagement);
+    User user =
+        userRepository
+            .findById(userId)
+            .orElseThrow(() -> new CustomException(StatusCode.USER_NOT_FOUND));
+    user.updatePreferences(lectureAmount, priceLevel, likesBooks);
 
     List<Subject> subjectList = subjectRepository.findAllById(subjectIds);
 
@@ -350,7 +384,6 @@ public class RoadmapService {
             .orElseThrow(() -> new CustomException(StatusCode.NOT_EXIST_USER));
 
     RoadmapManagement roadmapManagement = roadmapManagementRepository.findByUserId(userId);
-    if (roadmapManagement == null) return new MyPageResDto(user.getNickname(), 0);
 
     List<Roadmap> roadmaps =
         roadmapRepository.findByRoadmapManagement_RoadmapManagementId(
@@ -361,7 +394,8 @@ public class RoadmapService {
 
     int percent = (int) ((double) completed / total * 100);
 
-    return new MyPageResDto(user.getNickname(), percent);
+    return new MyPageResDto(
+        user.getNickname(), roadmapManagement.getRoadmapNm(), percent, total, completed);
   }
 
   public void updateRoadmap(Long userId, List<SubjectDto> subjects) {
@@ -422,7 +456,7 @@ public class RoadmapService {
     roadmapRepository.saveAll(toSave);
   }
 
-  public List<SubjectDto> getDefaultRoadmap(String defaultRoadmapType) {
+  public RoadmapFindResDto getDefaultRoadmap(String defaultRoadmapType) {
     long roadmapId;
 
     if (defaultRoadmapType.equals("FE")) {
@@ -436,14 +470,19 @@ public class RoadmapService {
     List<Roadmap> roadmaps =
         roadmapRepository.findByRoadmapManagement_RoadmapManagementId(roadmapId);
 
-    return roadmaps.stream()
-        .sorted(Comparator.comparing(Roadmap::getOrderSub))
-        .map(
-            r -> {
-              Subject s = r.getSubject();
-              return new SubjectDto(s.getSubId(), s.getSubNm(), s.getBaseSubOrder());
-            })
-        .collect(Collectors.toList());
+    List<SubjectDto> subjects =
+        roadmaps.stream()
+            .sorted(Comparator.comparing(Roadmap::getOrderSub))
+            .map(
+                r ->
+                    new SubjectDto(
+                        r.getSubject().getSubId(), r.getSubject().getSubNm(), r.getOrderSub()))
+            .toList();
+
+    String roadmapName = roadmaps.getFirst().getRoadmapManagement().getRoadmapNm();
+    Long userLocationSubjectId = findUserLocationRoadmap(roadmaps);
+
+    return new RoadmapFindResDto(subjects, roadmapName, userLocationSubjectId);
   }
 
   public RoadmapSaveResDto saveDefaultRoadmap(String roadmapType, Long userId) {
@@ -498,7 +537,7 @@ public class RoadmapService {
     }
 
     return new RoadmapSaveResDto(
-        "user Default Roadmap", userLocationSubjectId, getDefaultRoadmap(roadmapType));
+        "user Default Roadmap", userLocationSubjectId, getDefaultRoadmap(roadmapType).subjects());
   }
 
   public RoadmapFindResDto findUserRoadmap(RoadmapManagement userRoadmapManagement) {
